--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.redux-app {
+  background: rgba(0, 0, 0, 0.1);
+}
+.btn-toolbar button + button {
+  margin-left: 10px;
+}
+.mT20 {
+  margin-top: 20px;
+}
+.todo-item-sec select {
+  float: right;
+  width: auto;
+}
+.todo-item-sec:after {
+  content: "";
+  display: table;
+  clear: both;
+}
